# rolfovo-mpos_android_ndk_spike

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mpos_bridge.h  native-lib.cpp
app/src/main/cpp/cmake/: micropython_mkrules_android.cmake  preprocess_qstr.py
app/src/main/cpp/micropython_port/: modmpos.c  mpconfigport.h  qstrdefsport.h
app/src/main/java/com/example/mposandroid/: MainActivity.java
app/src/main/res/values/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
